Debut de remplissage du fichier String.xml

--- a/App/DrapeauApp/app/src/main/res/values/strings.xml
+++ b/App/DrapeauApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DrapeauApp</string>
+    <string name="Utilisateur">Utilisateur</string>
+    <string name="utilisateur">utilisateur</string>
+    <string name="Quizz">Quizz</string>
+    <string name="quizz">quizz</string>
+    <string name="Drapeau">Drapeau</string>
+    <string name="drapeau">drapeau</string>
+
 </resources>
